Set up home screen and activity screens for each feature. Working on sign out button.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CovidResourceApp">
+        <activity android:name=".ContactTracingActivity"></activity>
+        <activity android:name=".VisualPlannerActivity" />
+        <activity android:name=".DistanceDetectionActivity" />
+        <activity android:name=".HomeScreenActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
