Added self-report activity - Get's list of close contacts to person who tested positive - Uses Firebase real-time database to complete the read and write of close contacts' data - Will not email people who have been close contacts for more than 2 weeks

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.covidresourceapp"
+        multiDexEnabled true
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
@@ -44,6 +45,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-storage-ktx'
+    implementation 'com.google.firebase:firebase-database'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
     testImplementation 'junit:junit:4.13.1'
