--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,17 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.covidresourceapp">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera"/>
+    <uses-feature android:name="android.hardware.sensor.accelerometer" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CovidResourceApp">
+        android:theme="@style/Theme.CovidResourceApp"
+        android:hardwareAccelerated="true">
         <activity android:name=".ContactTracingActivity"></activity>
         <activity android:name=".VisualPlannerActivity" />
-        <activity android:name=".DistanceDetectionActivity" />
-        <activity android:name=".HomeScreenActivity" />
+        <activity android:name=".DistanceDetectionActivity"  android:hardwareAccelerated="true"/>
+        <activity android:name=".HomeScreenActivity"/>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
